alambert    2005/10/07 18:18:19 UTC	(20051007-2747)
  Log:
  OS MODE: Make sure we specify which channel doesn't exist. Reported by pi.

  Changes:	Modified:
  +1 -1		trunk/modules/operserv/mode.c (File Modified) 


nenolod     2005/10/07 03:45:59 UTC	(20051007-2745)
  Log:
  glibc sucks.

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


kog         2005/10/07 01:43:55 UTC	(20051007-2743)
  Log:
  notify hook now uses notice, not myuser_notice
  

  Changes:	Modified:
  +5 -3		trunk/modules/memoserv/main.c (File Modified) 


jilles      2005/10/07 00:50:12 UTC	(20051007-2741)
  Log:
  Improve message on login/identify to a frozen nick/username.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/identify.c (File Modified) 
  +1 -1		trunk/modules/userserv/login.c (File Modified) 


jilles      2005/10/07 00:49:45 UTC	(20051007-2739)
  Log:
  Quotes need to be used in pairs.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/set.c (File Modified) 
  +2 -3		trunk/modules/userserv/set.c (File Modified) 


pfish       2005/10/07 00:28:21 UTC	(20051007-2737)
  Log:
  remove subject from syntax
  

  Changes:	Modified:
  +1 -1		trunk/modules/memoserv/send.c (File Modified) 


jilles      2005/10/06 23:07:28 UTC	(20051006-2735)
  Log:
  Change user_identify hook to take user_t instead of myuser_t.
  

  Changes:	Modified:
  +1 -1		trunk/modules/nickserv/identify.c (File Modified) 
  +1 -1		trunk/modules/userserv/login.c (File Modified) 


pfish       2005/10/06 22:52:39 UTC	(20051006-2733)
  Log:
  - Port NickServ/SET additions (emailmemos, nomemo) over to UserServ.
  - Add help for NS/US SET emailmemos
  

  Changes:	Modified:
  + -		trunk/help/nickserv/set_emailmemos (File Added) 
  + -		trunk/help/userserv/set_emailmemos (File Added) 
  +2 -0		trunk/modules/nickserv/set.c (File Modified) 
  +108 -0	trunk/modules/userserv/set.c (File Modified) 


kog         2005/10/06 21:21:25 UTC	(20051006-2731)
  Log:
  hooks user_identify
  
